--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,9 +2,14 @@
 <div class="import">
   <ngl-form-element label="Select file for import" [error]="hasError ? error : null" class="slds-m-top--small">
   <select nglFormControl class="slds-select" [required]="required" [(ngModel)]="selectFile">
-    <option>Option One</option>
-    <option>Option Two</option>
-    <option>Option Three</option>
+    <option>Stocks</option>
+    <option>Statsbygg state of estate</option>
+    <option>Flights 300K</option>
+    <option>Airports</option>
   </select>
 </ngl-form-element>
+</div>
+
+<div class="button">
+    <button type="button" nglButton="brand" (click)="change()">Change</button>    
 </div>
