--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,10 @@
   <datatable></datatable>    
 </div>
 
-<div class="sidebar">
-  <sidebar></sidebar>    
+<div class="sidebarImport">
+  <sidebarImport></sidebarImport>    
+</div>
+
+<div class="sidebarImportButton">
+    <button type="button" nglButton="brand" (click)="getDataRaw()">Import file</button>    
 </div>
