Implemented initial integration sidebar and table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,7 @@
 <div class="sidebarImportButton">
     <button type="button" nglButton="brand" (click)="getDataRaw()">Import file</button>    
 </div>
+
+<div class="sidebarImportButton">
+    <button type="button" nglButton="brand" (click)="tester()">Initialize table</button>    
+</div>
