Refactoring, updates sidebar service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,5 +12,5 @@
 </div>
 
 <div class="sidebarImportButton">
-    <button type="button" nglButton="brand" (click)="tester()">Initialize table</button>    
+    <button type="button" nglButton="brand" (click)="getDataParsed()">Initialize table</button>    
 </div>
