--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,6 +1,2 @@
 
-<div id="example"></div>
-
-<div class="button">
-    <button type="button" nglButton="brand" (click)="change()">Change</button>    
-</div>
+<div id="datatable"></div>
