--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,6 +9,12 @@ div.datatable {
   padding: 10px;
 }
 
+div.chart {
+  width: 75%;
+  float: right;
+  padding: 10px;
+}
+
 div.sidebarImport {
   width: 25%;
   float: left;
@@ -16,9 +22,13 @@ div.sidebarImport {
   padding-bottom: 10px;
 }
 
-div.sidebarImportButton {
-  width: 25%;
-  float: left;
+div.container {
   padding: 10px;
   padding-bottom: 5px;
+}
+
+div.sidebarImportButton {
+  padding: 10px;
+  padding-bottom: 5px;
+  display: inline-block;
 }
