Improved component integration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,8 @@
   <sidebar></sidebar>
 </div>
 
-<div class="chart">
-  <chart></chart>    
+<div id="container">
+  <div class="sidebarImportButton">
+    <button type="button" nglButton="brand" (click)="runTransformation()">Run</button>    
+</div>
 </div>
