--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,2 +1,6 @@
 
 <div id="datatable"></div>
+
+<div class="chart">
+  <chart [barChartData]='barChartData' [barChartLabels]='barChartLabels'></chart>    
+</div>
