--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <ngl-form-element label="Select transformation" [error]="hasError ? error : null" class="slds-m-top--small">
   <select nglFormControl class="slds-select" [required]="required" [(ngModel)]="selectFile">
-    <option>Test sidebar</option>
+    <option>Headers</option>
     <option>Test sidebar 2</option>
   </select>
 </ngl-form-element>
