Added profiling.service and chart.service

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -2,5 +2,5 @@
 <div id="datatable"></div>
 
 <div class="chart">
-  <chart [barChartData]='barChartData' [barChartLabels]='barChartLabels'></chart>    
+  <chart [chartData]='chartData' [chartLabels]='chartLabels'></chart>    
 </div>
