--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,11 +1,13 @@
+<h4>Distinct values</h4>
+
 <div class="chart">
   <div style="display: block">
-    <canvas baseChart height="100%"
-            [datasets]="barChartData"
-            [labels]="barChartLabels"
-            [options]="barChartOptions"
-            [legend]="barChartLegend"
-            [colors]="barChartColors"
-            [chartType]="barChartType"
-            (chartHover)="chartHovered($event)"
-            (chartClick)="chartClicked($event)"></canvas>
+  <canvas baseChart
+              [data]="chartData"
+              [labels]="chartLabels"
+              [legend]="chartLegend"
+              [chartType]="chartType"
+              (chartHover)="chartHovered($event)"
+              (chartClick)="chartClicked($event)"></canvas>
+</div>
+</div>
