--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -6,5 +6,12 @@
 }
 
 .chart {
+    width: 20%;
+    float: left;
     padding-top: 20px;
+    /* border-style: solid;
+    border-width: thin;
+    border-radius: 3px;
+    border-color: darkgrey; 
+    */
 }
