Refactoring + added profiling for data quality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,6 @@
 
 <div id="container">
   <div class="sidebarImportButton">
-    <button type="button" nglButton="brand" (click)="runTransformation()">Run</button>    
+    <button type="button" nglButton="brand" (click)="runTransformation()">Apply transformation step</button>    
 </div>
 </div>
