--- a/src/app/chart/chart.component.css
+++ b/src/app/chart/chart.component.css
@@ -1,8 +1,16 @@
+* {
+  box-sizing: border-box;
+}
 
 h4 {
     text-align: center;
+    line-height: 1.5;
+    padding-bottom: 20px;
 }
 
 .chart {
+    display: inline-block;
     padding-top: 20px;
+    padding-right: 60px;
+    width: 300px;
 }
