--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -2,5 +2,6 @@
 <div id="datatable"></div>
 
 <div class="chart">
-  <chart [chartData]='chartData' [chartLabels]='chartLabels'></chart>    
+  <chart [chartData01]='chartData01' [chartLabels01]='chartLabels01' [chartData02]='chartData02' 
+  [chartLabels02]='chartLabels02'></chart>       
 </div>
