--- a/src/app/chart/chart.component.css
+++ b/src/app/chart/chart.component.css
@@ -8,7 +8,14 @@ h4 {
     padding-bottom: 20px;
 }
 
-.chart {
+.chart01 {
+    display: inline-block;
+    padding-top: 20px;
+    padding-right: 60px;
+    width: 300px;
+}
+
+.chart02 {
     display: inline-block;
     padding-top: 20px;
     padding-right: 60px;
