--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -3,5 +3,5 @@
 
 <div class="chart">
   <chart [chartData01]='chartData01' [chartLabels01]='chartLabels01' [chartData02]='chartData02' 
-  [chartLabels02]='chartLabels02'></chart>       
+  [chartLabels02]='chartLabels02' [profileSubset]="profileSubset" (profileSubsetEmitter)="onProfileSubsetEmitted($event)"></chart>       
 </div>
