Added type inference and transformation.service

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,8 @@
 div.datatable {
   width: 75%;
   float: right;
-  padding: 10px;
+  padding-top: 10px;
+  padding-left: 10px;
   padding-right: 30px;
 }
 
