--- a/src/app/sidebar.import/sidebar.import.component.html
+++ b/src/app/sidebar.import/sidebar.import.component.html
@@ -1,6 +1,6 @@
 
 <div class="sidebarImport">
-  <ngl-form-element label="Select file for import" [error]="hasError ? error : null" class="slds-m-top--small">
+  <ngl-form-element label="SELECT FILE FOR IMPORT" [error]="hasError ? error : null" class="slds-m-top--small">
   <select nglFormControl class="slds-select" [required]="required" [(ngModel)]="selectFile">
     <option>Stocks</option>
     <option>Statsbygg state of estate</option>
