Added statistics chart + initial steps component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,9 +23,18 @@ div.sidebar {
   width: 25%;
   float: left;
   padding: 10px;
-  padding-top: 20px;  
+  padding-top: 30px;  
   padding-bottom: 10px;
-  padding-right: 40px;    
+  padding-right: 40px;  
+}
+
+div.steps {
+  width: 25%;
+  float: left;
+  padding: 10px;
+  padding-top: 60px;  
+  padding-bottom: 10px;
+  padding-right: 40px;  
 }
 
 div.container {
