--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,3 +27,7 @@
     <button type="button" nglButton="brand" (click)="runTransformation()">Apply transformation step</button>    
 </div>
 </div>
+
+<div class="steps">
+  <steps></steps>
+</div>
