--- a/src/app/sidebar.import/sidebar.import.component.html
+++ b/src/app/sidebar.import/sidebar.import.component.html
@@ -2,6 +2,7 @@
 <div class="sidebarImport">
   <ngl-form-element label="SELECT FILE FOR IMPORT" [error]="hasError ? error : null" class="slds-m-top--small">
   <select nglFormControl class="slds-select" [required]="required" [(ngModel)]="selectFile">
+    <option>Weather</option>    
     <option>Stocks</option>
     <option>Statsbygg state of estate</option>
     <option>Flights 300K</option>
