--- a/src/app/steps/steps.component.html
+++ b/src/app/steps/steps.component.html
@@ -1,8 +1,8 @@
-<div class="sidebar">
+<div class="steps">
 
 <table ngl-datatable [data]="data" trackByKey="rank" [bordered]="bordered" [striped]="striped" (onRowClick)="onRowClick($event)" class="slds-max-medium-table--stacked-horizontal">
   <ngl-datatable-column heading="Select transformation" key="transformation">
-    <template nglDatatableHeading><div style="font-size: 130%; border-bottom: 1px solid lightgray; padding-bottom: 8px;"><strong>Select transformation</strong></div></template>
+    <template nglDatatableHeading><div style="font-size: 130%; border-bottom: 1px solid lightgray; padding-bottom: 8px;"><strong>Pipeline steps</strong></div></template>
   </ngl-datatable-column>
 </table>
 
