--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -6,3 +6,17 @@ body {
 .sidebar {
   border: 1px solid lightgray; 
 }
+
+#container {
+  padding-top: 0px;
+}
+
+.dropdown {
+  padding-right: 20px;
+  display: inline-block;
+}
+
+.inputform {
+  width: 100px;
+  display: inline-block;  
+}
