--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
 
-<table ngl-datatable [data]="data" trackByKey="rank" [bordered]="bordered" [striped]="striped" (onRowClick)="onRowClick($event)" class="slds-max-medium-table--stacked-horizontal">
+<table ngl-datatable [data]="data" trackByKey="rank" [bordered]="bordered" [striped]="striped" (onRowClick)="onRowClick($event)" style="max-height:200;" class="slds-max-medium-table--stacked-horizontal">
   <ngl-datatable-column heading="Transformation" key="transformation">
     <template nglDatatableHeading><div style="font-size: 130%; border-bottom: 1px solid lightgray; padding-bottom: 8px;"><strong>Transformations</strong></div></template>
   </ngl-datatable-column>
@@ -31,11 +31,10 @@
   </div>
 
 <div class="inputform">
-    <ngl-form-element label="Input Parameter" [error]="hasError ? error : null" class="slds-m-top--small">
-    <input nglFormControl type="text" placeholder="Input" [required]="required">
+  <ngl-form-element label="Parameter" class="slds-m-top--small">
+    <input nglFormControl type="text" placeholder="Input" [required]="required" [(ngModel)]="inputParameter">
   </ngl-form-element>
 </div>
-
 
 </div>
 
