Fix/ updates steps component and profiling service

--- a/src/app/steps/steps.component.html
+++ b/src/app/steps/steps.component.html
@@ -2,7 +2,7 @@
 
 <table ngl-datatable [data]="stepSequence" trackByKey="rank" [bordered]="bordered" [striped]="striped" (onRowClick)="onRowClick($event)" class="slds-max-medium-table--stacked-horizontal">
   <ngl-datatable-column heading="Steps" key="title">
-    <template nglDatatableHeading><div style="font-size: 130%; border-bottom: 1px solid lightgray; padding-bottom: 8px;"><strong>Steps</strong></div></template>
+    <template nglDatatableHeading><div style="font-size: 130%;"><strong>Steps</strong></div></template>
   </ngl-datatable-column>
 </table>
 
