--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <div class="sidebar">
 
-<table ngl-datatable [data]="data" trackByKey="rank" [bordered]="bordered" [striped]="striped" (onRowClick)="onRowClick($event)" style="max-height:200;" class="slds-max-medium-table--stacked-horizontal">
+<table ngl-datatable [data]="data" trackByKey="rank" [bordered]="bordered" [striped]="striped" (onRowClick)="onRowClick($event)" style="height: 200px;" class="slds-max-medium-table--stacked-horizontal">
   <ngl-datatable-column heading="Transformation" key="transformation">
-    <template nglDatatableHeading><div style="font-size: 130%; border-bottom: 1px solid lightgray; padding-bottom: 8px;"><strong>Transformations</strong></div></template>
+    <template nglDatatableHeading><div style="font-size: 130%;"><strong>Transformations</strong></div></template>
   </ngl-datatable-column>
 </table>
 
