--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -4,6 +4,7 @@
   <canvas baseChart
               [data]="chartData01"
               [labels]="chartLabels01"
+              [options]="chartOptions01"              
               [legend]="chartLegend01"
               [colors]="chartColors01"  
               [chartType]="chartType02"
@@ -17,6 +18,7 @@
   <canvas baseChart
               [data]="chartData02"
               [labels]="chartLabels02"
+              [options]="chartOptions02"                            
               [colors]="chartColors02"
               [legend]="chartLegend02"
               [chartType]="chartType02"
