--- a/src/app/steps/steps.component.html
+++ b/src/app/steps/steps.component.html
@@ -6,4 +6,8 @@
   </ngl-datatable-column>
 </table>
 
+<!--
+<p-listbox [options]="transformations" [(ngModel)]="transformationSelected" [style]="{'width':'330px','max-height':'200px'}"></p-listbox>
+-->
+
 </div>
