--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 
-<strong>TRANSFORMATIONS</strong>
+<strong> SUGGESTED TRANSFORMATIONS</strong>
 
 <div class="sidebar">
 
-<p-listbox [options]="transformations" [(ngModel)]="transformationSelected" [style]="{'width':'330px','max-height':'230px'}"></p-listbox>
+<p-listbox [options]="transformations" [(ngModel)]="transformationSelected" [style]="{'width':'370px','max-height':'230px'}"></p-listbox>
 
 </div>
 
