--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -3,7 +3,6 @@
 
 <div class="chart">
 
-  <chart [chartData01]='chartData01' [chartLabels01]='chartLabels01' [chartData02]='chartData02' 
-  [chartLabels02]='chartLabels02' [chartData03]='chartData03' [profileSubset]="profileSubset" [inferredType]="inferredType" (profileSubsetEmitter)="onProfileSubsetEmitted($event)"></chart>       
+  <chart [chartData01]='chartData01' [chartData02]='chartData02' [chartData03]='chartData03' [profileSubset]="profileSubset" [inferredType]="inferredType" (profileSubsetEmitter)="onProfileSubsetEmitted($event)"></chart>       
 
 </div>
