--- a/src/app/steps/steps.component.html
+++ b/src/app/steps/steps.component.html
@@ -1,8 +1,7 @@
 <div class="steps">
 
 <table ngl-datatable [data]="stepSequence" trackByKey="rank" [bordered]="bordered" [striped]="striped" (onRowClick)="onRowClick($event)" class="slds-max-medium-table--stacked-horizontal">
-  <ngl-datatable-column heading="Steps" key="title">
-    <template nglDatatableHeading><div style="font-size: 130%;"><strong>Steps</strong></div></template>
+  <ngl-datatable-column key="title">
   </ngl-datatable-column>
 </table>
 
