--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
   <datatable [profileSubset]="profileSubset" (profileSubsetEmitter)="onProfileSubsetEmitted($event)"></datatable>    
 </div>
 
+<div class="container">
+  <ngl-section [(open)]="open" title="FILE IMPORT">
 <div id="sidebarImport">
   <div class="sidebarImportButton">
     <button type="button" nglButton="brand" (click)="getDataRaw()">Import file</button>    
@@ -12,6 +14,9 @@
     <sidebarImport></sidebarImport>    
   </div>
 </div>
+</ngl-section>
+
+<ngl-section [(open)]="open1" title="SUGGESTED TRANSFORMATIONS">
 
 <div class="sidebar">
   <sidebar></sidebar>
@@ -19,10 +24,19 @@
 
 <div id="containerApplyTransformationButton">
   <div class="sidebarImportButton">
-    <button type="button" nglButton="brand" (click)="applyTransformation()">Apply transformation</button>    
+    <button type="button" nglButton="brand" (click)="applyTransformation()">Apply transformation</button>
+  <div *ngIf="display" class="status">
+    <span class="label label-success">SUCCESSFULLY APPLIED</span>        
+  </div>
 </div>
 </div>
 
+</ngl-section>
+
+<ngl-section [(open)]="open2" title="STEPS">
 <div class="steps">
   <steps [stepSequence]="stepSequence" (stepsEmitter)="onStepsEmitted($event)"></steps>
 </div>
+</ngl-section>
+</div>
+
