--- a/src/app/chart/chart.component.css
+++ b/src/app/chart/chart.component.css
@@ -27,11 +27,23 @@ h5 {
   color: #212121;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  padding-left: 30px;
+  padding-left: 0px;
+}
+
+.chart03 {
+    width: 350px;
+    height: 400px;
 }
 
 #chart03 {
     width: 350px;
     height: 400px;
-    padding-left: 30px;
+    padding-left: 75px;
+}
+
+.chart04 {
+    width: 250px;
+    height: 400px;
+    padding-top: 60px;
+    padding-left: 230px;
 }
