--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -1,12 +1,12 @@
 
 #datatable {
-  font-family: 'Roboto', sans-serif;  
+  font-family: 'Roboto', sans-serif;
   color: black;
   font-weight: normal;
 }
 
 .chart {
-    height: 400px;
-    display: inline-block;
-    padding-top: 0px;
+  height: 400px;
+  display: inline-block;
+  padding-top: 0;
 }
