Improved UX/ UI - implemented Clarity Design System

--- a/src/app/steps/steps.component.html
+++ b/src/app/steps/steps.component.html
@@ -1,9 +1,9 @@
 <div class="steps">
 
-  <table ngl-datatable [data]="stepSequence" trackByKey="rank" [bordered]="bordered" [striped]="striped"
-         (onRowClick)="onRowClick($event)" class="slds-max-medium-table--stacked-horizontal">
+  <table ngl-datatable [data]="stepSequence" trackByKey="rank" [bordered]="bordered" [striped]="striped" (onRowClick)="onRowClick($event)"
+    style="background-color:rgb(250, 250, 250);" class="slds-max-medium-table--stacked-horizontal">
     <ngl-datatable-column key="title">
     </ngl-datatable-column>
-  </table>
+    </table>
 
 </div>
