--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,61 +3,53 @@
   box-sizing: border-box;
 }
 
-div.datatable {
-  width: 75%;
-  float: right;
-  padding-top: 40px;
-  padding-left: 10px;
-  padding-right: 30px;
+.title {
+  padding-top: 5px;
+  padding-left: 15px;
+  size: 120%;
 }
 
-div.container {
-  width: 25%;
-  float: left;
-  padding-top: 20px;
+.datatable {
   padding-left: 10px;
-  padding-right: 40px;
-}
-
-div.sidebarImport {
-  width: 100%;
-  float: left;
-  padding-bottom: 20px;
   padding-right: 10px;
 }
 
-div.sidebar {
-  padding-top: 15px;
+.sidebar {
+  padding-top: 25px;
   padding-bottom: 20px;
-  padding-right: 40px;
+  padding-left: 10px;
 }
 
-div.steps {
-  padding-top: 20px;
+.steps {
+  padding-top: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.fileSelection {
+  padding-top: 15px;
+  padding-left: 10px;
+  padding-right: 15px;  
+  padding-bottom: 20px;
+}
+
+.container {
   padding-bottom: 10px;
-  padding-right: 40px;
 }
 
-div.fileSelection {
-  width: 255px;
-  padding-bottom: 5px;
-  display: inline-block;
-}
-
-div.containerApplyTransformationButton {
-  padding-top: 10px;
-  padding-right: 30px;
-  padding-bottom: 40px;
-  display: inline-block;
+.apply {
+  display: inline-block;  
 }
 
 .status {
-  padding-left: 30px;
-  display: inline-block;
+  padding-left: 15px;
+  display: inline-block;  
 }
 
-div.sidebarImportButton {
-  padding-right: 20px;
+h4 {
   padding-bottom: 5px;
-  display: inline-block;
+}
+
+.sidebarImportButton {
+  padding-left: 10px;
 }
