--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,68 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<div class="datatable">
-  <datatable [profileSubset]="profileSubset" (profileSubsetEmitter)="onProfileSubsetEmitted($event)" (tableSelectedEmitter)="onTableSelectedEmitted($event)"></datatable>
-</div>
+<div class="main-container">
 
-<div class="container">
-  <ngl-section [(open)]="open0" title="FILE IMPORT">
-    <div id="sidebarImport">
-      <div class="sidebarImportButton">
-        <button type="button" nglButton="brand" (click)="getDataRaw()">Import file</button>
-      </div>
-      <div class="fileSelection">
-        <sidebarImport></sidebarImport>
-      </div>
+  <header class="header header-1">
+    <div class="branding">
+      <a href="" class="nav-link">
+        <img src="http://localhost:4200/assets/logo.png" height="48" width="48">
+        <span class="title"><strong>Grafterizer Prototype</strong></span>
+      </a>
     </div>
-  </ngl-section>
-
-  <ngl-section [(open)]="open1" title="SUGGESTED TRANSFORMATIONS">
-
-    <div class="sidebar">
-      <sidebar></sidebar>
-    </div>
-
-    <div id="containerApplyTransformationButton">
-      <div class="sidebarImportButton">
-        <button type="button" nglButton="brand" (click)="applyTransformation()">Apply transformation</button>
-        <div *ngIf="display" class="status">
-          <span class="label label-success">SUCCESSFULLY APPLIED</span>
+    <div class="header-actions">
+      <clr-dropdown class="dropdown bottom-right">
+        <button class="nav-icon" clrDropdownToggle>
+                <clr-icon shape="user"></clr-icon>
+                <clr-icon shape="caret down"></clr-icon>
+            </button>
+        <div class="dropdown-menu">
+          <a href="" clrDropdownItem>About</a>
+          <a href="" clrDropdownItem>Preferences</a>
+          <a href="" clrDropdownItem>Log out</a>
         </div>
+      </clr-dropdown>
+    </div>
+  </header>
+
+  <div class="content-container">
+    <div class="content-area">
+      <div class="datatable">
+        <datatable [profileSubset]="profileSubset" (profileSubsetEmitter)="onProfileSubsetEmitted($event)" (tableSelectedEmitter)="onTableSelectedEmitted($event)"></datatable>
       </div>
     </div>
 
-  </ngl-section>
+    <nav class="sidenav">
+      <clr-tabs>
+        <clr-tab-link [clrTabLinkId]="'link1'" [clrTabLinkActive]="true">File Import</clr-tab-link>
+        <clr-tab-link>Suggested Transformations</clr-tab-link>
 
-  <ngl-section [(open)]="open2" title="STEPS">
-    <div class="steps">
-      <steps [stepSequence]="stepSequence" (stepsEmitter)="onStepsEmitted($event)"></steps>
-    </div>
-  </ngl-section>
+        <clr-tab-content [clrTabContentId]="'import'" [clrTabContentActive]="true">
+          <div class="fileSelection">
+            <sidebarImport></sidebarImport>
+          </div>
+          <div class="sidebarImportButton">
+            <button type="submit" (click)="getDataRaw()" class="btn btn-primary btn-sm">Import</button>
+          </div>
+        </clr-tab-content>
+        <clr-tab-content [clrTabContentId]="'content2'" [clrTabContentActive]="false">
+          <div class="sidebar">
+            <sidebar></sidebar>
+          </div>
+          <div class="container">
+            <div class="apply">
+              <button type="submit" (click)="applyTransformation()" class="btn btn-primary btn-sm">Apply</button>
+            </div>
+            <div *ngIf="display" class="status">
+              <span class="label label-success">APPLIED</span>
+            </div>
+          </div>
+          <div class="steps">
+            <h4><strong>Steps Pipeline</strong></h4>
+            <steps [stepSequence]="stepSequence" (stepsEmitter)="onStepsEmitted($event)"></steps>
+          </div>
+        </clr-tab-content>
+      </clr-tabs>
+    </nav>
+
+  </div>
 </div>
